# web-interview-recorder

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vercel.json  vite.config.js
client/: App.jsx  index.css  index.html  main.jsx  questionBank.js
docs/: PER_QUESTION_UPLOAD_TESTING.md
server/: ai_service.py  ai_service_v2.py  job_queue.py  main.py  queue_worker.py
server/api/: firebase_setup.py  models.py  router.py
server/scripts/: fix_transcript.py  repair_meta_encoding.py
